# raytrace_render

./: .gitignore  CMakeLists.txt  vcpkg.json
code/: app.cpp  app.hpp  geometry.hpp  header.hpp  main.cpp  pipelineBuilder.cpp  pipelineBuilder.hpp
shaders/: shader.vert
